# Backend

./: .gitignore  Dockerfile  Makefile  README.md  bd.yaml  docker-compose.yml  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 20240901_3bb6c738903d_products_aa.py  20240901_422a530b49b9_all.py  20240901_d6d4a84e78b7_products_and_users.py  20240901_df0c6b036fed_products.py  20240902_4efd1e7ec2e2_orderphoto.py  20240902_5288390f9171_.py  20240902_9398ea6fc023_order.py  20240902_bada3b21b6aa_done.py  20240915_f77f39bc22b5_photo.py
src/: main.py
src/app/api/: router.py
src/app/api/donat/: donat.py
src/app/api/godsend/: godsend.py  godsend_photo.py
src/app/api/order/: order.py  order_photo.py
src/app/api/product/: product.py  product_basket.py  product_photo.py
src/app/api/user/: company_user.py  natural_user.py  user.py  user_photo.py
src/app/api/v1/: auth.py
src/app/models/donat/: donat.py
src/app/models/godsend/: godsend.py  godsend_photo.py
src/app/models/mixin/: mixin.py
src/app/models/order/: order.py  order_photo.py
src/app/models/photo/: photo.py
src/app/models/product/: product_basket.py  product_photo.py  product_shop.py
src/app/models/user/: company_user.py  natural_user.py  user.py  user_photo.py
src/app/repositories/: exceptions.py
src/app/schemas/: auth.py  types.py
src/app/services/: user.py
src/app/utils/: repository.py  unitofwork.py
src/app_config/: app_settings.py  config_db.py  config_redis.py  dependies.py
src/database/: all_models.py  database.py  database_metadata.py  db_accessor.py  types.py
(+28 files in other folders)
