[tool.poetry]
name = "pomosch"
version = "0.1.0"
description = ""
authors = ["4got10king <Aldavletshina77654@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.21" }
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.8"
grpcio-tools = "^1.66.2"
grpcio = "^1.66.2"
python-bcrypt = "^0.3.2"
python-jose = "^3.3.0"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
